# finsight

./: .env.example  .gitignore  README.md  docker-compose.yml  finsight.py  render.yaml
.claude/: launch.json  settings.local.json
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/finsight/: __init__.py  logging_setup.py  main.py  settings.py
apps/api/finsight/agents/: critic.py  graph.py  market.py  memo_schema.py  news.py  quant.py  sec.py  state.py  writer.py
apps/api/finsight/db/: client.py  models.py
apps/api/finsight/jobs/: scheduler.py
apps/api/finsight/mcp_servers/: alpha_vantage_server.py
apps/api/finsight/prompts/: writer.py
apps/api/finsight/routers/: ingest.py  reports.py  research.py
apps/api/finsight/services/: cache.py  chunker.py  llm.py  rate_limit.py  sec_ingest.py  vectorstore.py
apps/api/finsight/tools/: alpha_vantage.py  base.py  edgar.py  mcp_client.py
apps/web/: package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/research/[ticker]/: page.tsx
apps/web/components/: agent-timeline.tsx  memo-viewer.tsx
apps/web/lib/: sse.ts  types.ts
