[project]
name = "finsight-api"
version = "0.1.0"
description = "FinSight backend — multi-agent equity research API"
requires-python = ">=3.11"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.27",

    # config & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # db
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",

    # ai / agents
    "openai>=1.55",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",

    # MCP — Anthropic's Model Context Protocol
    "mcp>=1.0.0",

    # vector
    "qdrant-client>=1.12",

    # data / quant
    "pandas>=2.2",
    "numpy>=2.0",

    # sec
    "beautifulsoup4>=4.12",
    "lxml>=5.3",

    # infra
    "apscheduler>=3.10",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finsight"]
